# rl-for-dummies

./: .gitignore  CS4246.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
cloud/: main.tf
cloud/examples/: terminate_all.sh
cloud/modules/rl_for_dummies/: main.tf  variables.tf
envs/: frozen_lake.py  minigrid.py  one.py  pushworld.py  shortcorridor.py
experiments/a2c_n_processes_effect/: Taskfile.yml  plot.ipynb
experiments/a2c_n_processes_effect/results/vanilla_16_processes_41/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_32_processes_40/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_32_processes_41/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_32_processes_42/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_32_processes_43/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_32_processes_44/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_64_processes_40/: results.csv
experiments/a2c_n_processes_effect/results/vanilla_64_processes_41/: results.csv
experiments/frozen_lake_shallow/: Taskfile.yml  networks.py  notes.md
experiments/meta_tabular_mdp/: Taskfile.yml
experiments/meta_v_a2c/: Taskfile.yml
experiments/parallel_envs/: Taskfile.yml  plot.ipynb
experiments/recurrent_v_vanilla_a2c/: Taskfile.yml  plot.ipynb
experiments/utils/: plot.py
experiments/varibad/: Taskfile.yml
probe_envs/: one.py  shortcorridor.py
rl_for_dummies/: README.md  a2c_cartpole.py  a2c_frozen_lake.py  a2c_minigrid.py  a2c_minigrid_parameterised.py  a2c_recurrent_minigrid (pytorch seq api).py  a2c_recurrent_minigrid.py  a2c_recurrent_minigrid_parameterised.py  dqn_jax.py  dqn_jax_simple.py  dqn_jax_simple_cleanrl_dwarf.py  dqn_simple_jax.py  dqn_simple_jax_frozen_lake.py  ppo_lstm_cartpole.py  reinforce_frozen_lake.py  reinforce_jax.py  reinforce_jax_frozen_lake.py
rl_for_dummies/pushworld/: a2c_pushworld.py  a2c_recurrent_braindead_pushworld.py  a2c_recurrent_braindead_pushworld_parameterised.py  a2c_recurrent_braindead_pushworld_parameterised_varibad.py  a2c_recurrent_pushworld.py  a2c_recurrent_pushworld_parameterised.py  a2c_recurrent_pushworld_parameterised_no_test.py  dqn_cleanrl_pushworld.py  dqn_pushworld.py  mdp_env.py  meta_a2c_braindead_pushworld.py  meta_a2c_braindead_pushworld_2.py  meta_a2c_braindead_pushworld_2_varibad.py  meta_a2c_pushworld.py  meta_a2c_pushworld_2.py  meta_a2c_pushworld_2_no_test.py  meta_a2c_tabular_mdp.py  ppo_pushworld.py
scripts/: submit_exp.py
(+42 files in other folders)
