[project]
name = "rl-for-dummies"
version = "0.1.0"
description = ""
authors = [
    {name = "Kim Young Jin",email = "kimyoungjin1001@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "absl-py (>=2.1.0,<3.0.0)",
    "attrs (>=25.1.0,<26.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "cfgv (>=3.4.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "dm-env (>=1.6,<2.0)",
    "dm-tree (>=0.1.9,<0.2.0)",
    "filelock (>=3.17.0,<4.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "fonttools (>=4.55.8,<5.0.0)",
    "gym (>=0.26.2,<0.27.0)",
    "gym-notices (>=0.0.8,<0.0.9)",
    "identify (>=2.6.6,<3.0.0)",
    "iniconfig (>=2.0.0,<3.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "mypy-extensions (>=1.0.0,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "nodeenv (>=1.9.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "packaging (>=24.2,<25.0)",
    "pathspec (>=0.12.1,<0.13.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "pluggy (>=1.5.0,<2.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "py (>=1.11.0,<2.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "setuptools-scm (>=8.1.0,<9.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "virtualenv (>=20.29.1,<21.0.0)",
    "tyro (>=0.9.13,<0.10.0)",
    "tensorboard (>=2.18.0,<3.0.0)",
    "gymnasium[other] (>=1.0.0,<2.0.0)",
    "minigrid (>=3.0.0,<4.0.0)",
    "wandb (>=0.19.6,<0.20.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "boto3 (>=1.37.23,<2.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    # If developing using the Pushworld repo locally, use the line below.
    "python3 @ git+https://github.com/jugheadjones10/pushworld.git#subdirectory=python3",
    # "python3 @ file:///Users/kimyoungjin/Projects/monkey/pushworld/python3"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.dependencies]
# python3 = {develop = true}

# [tool.poetry.group.dev.dependencies]
# python3 = {path = "/Users/kimyoungjin/Projects/monkey/pushworld/python3", develop = true, optional = true}
